<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".management.opl.OplFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_OplLastLoad"
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_main"
            android:padding="4dp"
            tools:text="Small Text" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:src="@drawable/splitter_vertical"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/editText_opl_Filter"
            style="@style/AStyle_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:ems="10"
            android:hint="@string/s_search"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_main">

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="7"
                android:text="@string/report_opl_clt" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="8"
                android:gravity="center"
                android:text="@string/report_opl_date" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="10"
                android:gravity="right"
                android:text="@string/report_opl_name" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="9"
                android:gravity="right"
                android:text="@string/report_opl_sum" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_opl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
