<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".management.price.PriceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_PriceLastLoad"
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_main"
            android:padding="4dp"
            android:text="text" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:src="@drawable/splitter_vertical"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/editText_price_Filter"
            style="@style/AStyle_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:ems="10"
            android:hint="@string/s_search"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="3dp"
                android:layout_weight="6"
                android:text="@string/report_tov_name" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="10"
                android:gravity="right"
                android:text="@string/report_tov_cena" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="10"
                android:gravity="right"
                android:text="@string/report_tov_ost" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="10"
                android:gravity="right"
                android:text="@string/report_tov_res" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
