<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ly_cltView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background_main"
                    android:text="@string/report_cltview_clt" />

                <TextView
                    android:id="@+id/et_cltview_clt_name"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:focusable="false" />

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background_main"
                    android:text="@string/report_cltview_addr" />

                <TextView
                    android:id="@+id/et_cltview_clt_addr"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background_main"
                    android:text="@string/report_cltview_phone" />

                <TextView
                    android:id="@+id/et_cltview_clt_phone"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:focusable="false" />

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/background_main"
                    android:text="@string/report_cltview_saldo" />

                <TextView
                    android:id="@+id/et_cltview_clt_saldo"
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/ib_map2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@color/background_transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/main_maps" />

        </LinearLayout>

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_main"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:text="Таблица операций" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_main"
            android:orientation="horizontal">

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="3dp"
                android:layout_weight="10"
                android:text="@string/report_cltview_oper" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="3dp"
                android:layout_weight="10"
                android:text="@string/report_cltview_date" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="10"
                android:gravity="right"
                android:text="@string/report_opl_name" />

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_weight="10"
                android:gravity="right"
                android:text="@string/report_cltview_sum" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>